Fix bottom spacing

--- a/content/loc_style_guides/Localization Style Guide - EN/LSG_EN_style.css
+++ b/content/loc_style_guides/Localization Style Guide - EN/LSG_EN_style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .doc-content {
-    padding: 0 1rem;
+    padding: 0 1rem 3rem;
     grid-area: 1 / 1 / span 5 / span 1;
     margin: 60px 15% 0 0;
     overflow-y: scroll;
@@ -118,7 +118,7 @@ table {
 
 .aside-content {
     grid-area: 1 / 2 / span 1 / span 1;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem 3rem;
     font-size: 0.8rem;
     color: var(--bg-5);
     line-height: 1.7;
